--- a/FizzBuzz/index.html
+++ b/FizzBuzz/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FizzBuzz</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="js/jquery.knob.js"></script>
         <link rel = "stylesheet" href = "css/style.css">
     </head>
 
@@ -25,7 +24,7 @@
                     <h2 class = "checkResult" , id = "checkResult"></h2>
                 <!--/div-->
                 
-                <input id = "num" type = "text" value = "0"></input>
+                <h2 id = "num">0</h2>
             </div>
 
         </main>
