--- a/FizzBuzz/index.html
+++ b/FizzBuzz/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FizzBuzz</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="js/jquery.knob.js"></script>
         <link rel = "stylesheet" href = "css/style.css">
     </head>
 
@@ -14,8 +15,8 @@
             <h1>FizzBuzz!</h1>
             
             <div id = "countButton">
-                <button id = "countUpButton"> UP </button>
-                <button id = "countDownButton"> DOWN </button>
+                <button id = "countUpButton">▲</button>
+                <button id = "countDownButton">▼</button>
                 <button id = "resetButton">RESET</button>
             </div>
 
@@ -24,7 +25,7 @@
                     <h2 class = "checkResult" , id = "checkResult"></h2>
                 <!--/div-->
                 
-                <h2 id = "num">0</h2>
+                <input id = "num" type = "text" value = "0"></input>
             </div>
 
         </main>
